--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
     <script src="../../node_modules/mocha/mocha.js"></script>
     <script src="../../node_modules/chai/chai.js"></script>
+    <script src="../../node_modules/chai-spies/chai-spies.js"></script>
     <script>
       mocha.setup('bdd')
       var should = chai.should();
@@ -14,7 +15,10 @@
     <script>
       async = require('breeze-async');
     </script>
-    <!-- <script src="../test.js"></script> -->
+    <script src="../forEach.js"></script>
+    <script src="../forEachSeries.js"></script>
+    <script src="../series.js"></script>
+    <script src="../parallel.js"></script>
     <script>onload = function () {
       if (window.mochaPhantomJS) mochaPhantomJS.run()
       else mocha.run();
